# fast_api_learning

./: alembic.ini  config.py  main.py  pyproject.toml  requirements.txt
auth/: database.py  manager.py
migrations/: env.py
migrations/versions/: 0f208b30031c_initial.py  62e085b893da_add_operation.py  7903776cfa6a_initial.py  b53849a25848_initial.py
models/: models.py
src/: config.py  database.py  main.py
src/auth/: manager.py  models.py  utils.py
src/operations/: models.py  router.py
src/tasks/: router.py  tasks.py
tests/: conftest.py  test_operations.py
