[tool.poetry]
name = "trading_proj"
version = "0.1.0"
description = ""
authors = ["mbgoodguy <nerooren4001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
